fix: change microbin args

--- a/microbin/compose.yaml
+++ b/microbin/compose.yaml
@@ -1,6 +1,7 @@
 services:
   microbin:
     image: danielszabo99/microbin:latest
+    container_name: microbin
     restart: always
     ports:
       - "65525:8080"
@@ -13,11 +14,11 @@ services:
       MICROBIN_ADMIN_PASSWORD: <secret>
       MICROBIN_EDITABLE: true
       # MICROBIN_FOOTER_TEXT: ${MICROBIN_FOOTER_TEXT}
-      # MICROBIN_HIDE_FOOTER: ${MICROBIN_HIDE_FOOTER}
-      # MICROBIN_HIDE_HEADER: ${MICROBIN_HIDE_HEADER}
-      # MICROBIN_HIDE_LOGO: ${MICROBIN_HIDE_LOGO}
-      # MICROBIN_NO_LISTING: ${MICROBIN_NO_LISTING}
-      # MICROBIN_HIGHLIGHTSYNTAX: ${MICROBIN_HIGHLIGHTSYNTAX}
+      MICROBIN_HIDE_FOOTER: true
+      MICROBIN_HIDE_HEADER: false
+      MICROBIN_HIDE_LOGO: true
+      MICROBIN_NO_LISTING: false
+      MICROBIN_HIGHLIGHTSYNTAX: true
       # MICROBIN_BIND: ${MICROBIN_BIND}
       # MICROBIN_PRIVATE: ${MICROBIN_PRIVATE}
       # MICROBIN_PURE_HTML: ${MICROBIN_PURE_HTML}
@@ -32,7 +33,7 @@ services:
       # MICROBIN_GC_DAYS: ${MICROBIN_GC_DAYS}
       # MICROBIN_ENABLE_BURN_AFTER: ${MICROBIN_ENABLE_BURN_AFTER}
       # MICROBIN_DEFAULT_BURN_AFTER: ${MICROBIN_DEFAULT_BURN_AFTER}
-      # MICROBIN_WIDE: ${MICROBIN_WIDE}
+      MICROBIN_WIDE: true
       # MICROBIN_QR: ${MICROBIN_QR}
       # MICROBIN_ETERNAL_PASTA: ${MICROBIN_ETERNAL_PASTA}
       # MICROBIN_ENABLE_READONLY: ${MICROBIN_ENABLE_READONLY}
@@ -40,7 +41,7 @@ services:
       # MICROBIN_NO_FILE_UPLOAD: ${MICROBIN_NO_FILE_UPLOAD}
       # MICROBIN_CUSTOM_CSS: ${MICROBIN_CUSTOM_CSS}
       # MICROBIN_HASH_IDS: ${MICROBIN_HASH_IDS}
-      # MICROBIN_ENCRYPTION_CLIENT_SIDE: ${MICROBIN_ENCRYPTION_CLIENT_SIDE}
-      # MICROBIN_ENCRYPTION_SERVER_SIDE: ${MICROBIN_ENCRYPTION_SERVER_SIDE}
-      # MICROBIN_MAX_FILE_SIZE_ENCRYPTED_MB: ${MICROBIN_MAX_FILE_SIZE_ENCRYPTED_MB}
-      # MICROBIN_MAX_FILE_SIZE_UNENCRYPTED_MB: ${MICROBIN_MAX_FILE_SIZE_UNENCRYPTED_MB}
+      MICROBIN_ENCRYPTION_CLIENT_SIDE: true
+      MICROBIN_ENCRYPTION_SERVER_SIDE: true
+      MICROBIN_MAX_FILE_SIZE_ENCRYPTED_MB: 16
+      MICROBIN_MAX_FILE_SIZE_UNENCRYPTED_MB: 16
