--- a/sing-box/compose.server.yaml
+++ b/sing-box/compose.server.yaml
@@ -5,5 +5,5 @@ services:
     network_mode: host
     volumes:
       - ./:/etc/sing-box/
-    command: -D /var/lib/sing-box -c /etc/sing-box/config.json run
+    command: -D /var/lib/sing-box -c /etc/sing-box/config.server.json run
     restart: always
