--- a/sing-box/client/config.client.json
+++ b/sing-box/client/config.client.json
@@ -38,6 +38,8 @@
       "type": "tun",
       "inet4_address": "172.19.0.1/30",
       "inet6_address": "fdfe:dcba:9876::1/126",
+      "inet4_route_exclude_address": ["192.0.0.0/8"],
+      "inet6_route_exclude_address": "fc03:1136:3800::/40",
       "auto_route": true,
       "strict_route": true,
       "sniff": true
