migrate to singbox1.10

--- a/sing-box/client/config.client.json
+++ b/sing-box/client/config.client.json
@@ -36,10 +36,9 @@
     },
     {
       "type": "tun",
-      "inet4_address": "172.19.0.1/30",
-      "inet6_address": "fdfe:dcba:9876::1/126",
-      "inet4_route_exclude_address": ["192.0.0.0/8"],
-      "inet6_route_exclude_address": "fc03:1136:3800::/40",
+      "address": ["172.19.0.1/30", "fdfe:dcba:9876::1/126"],
+      "route_address": ["0.0.0.0/1", "128.0.0.0/1", "::/1", "8000::/1"],
+      "route_exclude_address": ["192.168.0.0/16", "fc00::/7"],
       "auto_route": true,
       "strict_route": true,
       "sniff": true
