--- a/beszel/compose.yaml
+++ b/beszel/compose.yaml
@@ -1,9 +1,9 @@
 services:
   beszel:
-    image: 'henrygd/beszel'
-    container_name: 'beszel'
+    image: "henrygd/beszel"
+    container_name: "beszel"
     restart: unless-stopped
     ports:
-      - '65512:8090'
+      - "65512:8090"
     volumes:
       - ./beszel_data:/beszel_dat
