--- a/portainer/compose.yaml
+++ b/portainer/compose.yaml
@@ -3,9 +3,9 @@ services:
     image: portainer/portainer-ce:latest
     container_name: portainer
     ports:
-      - 65523:8000
-      - 65522:9443 # HTTPS
-      - 65521:9000 # HTTP
+      - "65523:8000"
+      - "65522:9443" # HTTPS
+      - "65521:9000" # HTTP
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
