--- a/sing-box/client/config.tmpl.json
+++ b/sing-box/client/config.tmpl.json
@@ -80,10 +80,10 @@
     {
       "type": "shadowsocks",
       "tag": "ss",
-      "server": "TODO",
+      "server": "$server_address",
       "server_port": 65534,
       "method": "2022-blake3-aes-128-gcm",
-      "password": "TODO",
+      "password": "$password",
       "multiplex": {
         "enabled": true
       }
@@ -91,9 +91,9 @@
     {
       "type": "vmess",
       "tag": "vmess",
-      "server": "TODO",
+      "server": "$server_address",
       "server_port": 65533,
-      "uuid": "TODO",
+      "uuid": "$uuid",
       "security": "auto",
       "authenticated_length": true,
       "multiplex": {
@@ -103,13 +103,13 @@
     {
       "type": "trojan",
       "tag": "trojan",
-      "server": "TODO",
+      "server": "$server_address",
       "server_port": 65532,
-      "password": "TODO",
+      "password": "$password",
       "tls": {
         "enabled": true,
         "server_name": "www.mihoyo.com",
-        "certificate": "TODO",
+        "certificate": "$certificate",
         "utls": {
           "enabled": true,
           "fingerprint": "chrome"
@@ -122,14 +122,14 @@
     {
       "type": "vless",
       "tag": "vless",
-      "server": "TODO",
+      "server": "$server_address",
       "server_port": 65529,
-      "uuid": "TODO",
+      "uuid": "$uuid",
       "flow": "xtls-rprx-vision",
       "tls": {
         "enabled": true,
         "server_name": "www.mihoyo.com",
-        "certificate": "TODO",
+        "certificate": "$certificate",
         "utls": {
           "enabled": true,
           "fingerprint": "chrome"
@@ -144,7 +144,7 @@
       "server": "",
       "server_port": 0,
       "method": "2022-blake3-aes-128-gcm",
-      "password": "TODO",
+      "password": "$password",
       "multiplex": {
         "enabled": true
       }
@@ -152,10 +152,10 @@
     {
       "type": "shadowtls",
       "tag": "shadowtls-outer",
-      "server": "TODO",
+      "server": "$server_address",
       "server_port": 65530,
       "version": 3,
-      "password": "TODO",
+      "password": "$password",
       "tls": {
         "enabled": true,
         "server_name": "www.mihoyo.com"
@@ -164,27 +164,27 @@
     {
       "type": "tuic",
       "tag": "tuic",
-      "server": "TODO",
+      "server": "$server_address",
       "server_port": 65528,
-      "uuid": "TODO",
-      "password": "TODO",
+      "uuid": "$uuid",
+      "password": "$password",
       "congestion_control": "cubic",
       "tls": {
         "enabled": true,
         "server_name": "www.mihoyo.com",
-        "certificate": "TODO"
+        "certificate": "$certificate"
       }
     },
     {
       "type": "hysteria2",
       "tag": "hysteria2",
-      "server": "TODO",
+      "server": "$server_address",
       "server_port": 65531,
-      "password": "TODO",
+      "password": "$password",
       "tls": {
         "enabled": true,
         "server_name": "www.mihoyo.com",
-        "certificate": "TODO"
+        "certificate": "$certificate"
       }
     },
     {
